--- a/index.html
+++ b/index.html
@@ -9,5 +9,36 @@
     <script src="dist/build.js"></script>
 </head>
 <body>
+
+<div>
+<video id="capture" autoplay="" playsinline="">
+
+</video>
+</div>
+<div id="dv0" >
+    <button id="bt0">Train 1</button>
+    <span id="sp0">No example added</span>
+</div>
+
+
+<div id="dv1" >
+    <button id="bt1">Train 2</button>
+    <span id="sp1">No example added</span>
+</div>
+
+
+<div id="dv2" >
+    <button id="bt2">Train 3</button>
+    <span id="sp2">No example added</span>
+</div>
+
+
+<div>
+<video id="resultVideo" width="320" height="240" autoplay>
+    <source src="video/mov_bbb.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+</div>
+
 </body>
 </html>
