--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 
 
 <div>
-<video id="resultVideo" width="320" height="240" autoplay>
-    <source src="video/mov_bbb.mp4" type="video/mp4">
+
+    <video id="resultVideo" width="320" height="240" autoplay="true" loop="true">
+    <source id="srcresultvideo" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 </div>
