video change added

--- a/index.html
+++ b/index.html
@@ -16,27 +16,26 @@
 </video>
 </div>
 <div id="dv0" >
-    <button id="bt0">Train 1</button>
+    <button id="bt0">Train Best Mates</button>
     <span id="sp0">No example added</span>
 </div>
 
 
 <div id="dv1" >
-    <button id="bt1">Train 2</button>
+    <button id="bt1">Train Take the L</button>
     <span id="sp1">No example added</span>
 </div>
 
 
 <div id="dv2" >
-    <button id="bt2">Train 3</button>
+    <button id="bt2">Train The floss</button>
     <span id="sp2">No example added</span>
 </div>
 
 
 <div>
 
-    <video id="resultVideo" width="320" height="240" autoplay="true" loop="true">
-    <source id="srcresultvideo" type="video/mp4">
+    <video id="resultVideo" width="320" height="240" autoplay="false" loop="false">
     Your browser does not support the video tag.
 </video>
 </div>
