--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </head>
 <body>
-
+<h1>Dancing Learning Machines</h1>
 <div class="videoin" >
 <video id="capture" autoplay="" playsinline="">
 </video>
